[gd_scene load_steps=26 format=3 uid="uid://b4rgxx3biwmm5"]

[ext_resource type="Script" uid="uid://wehpyln13fd7" path="res://Characters/Scripts/Enemies_scripts/maça.gd" id="1_xp5sn"]
[ext_resource type="Texture2D" uid="uid://b74nn5ugvt2mb" path="res://Characters/Sprites/Sprite-shadow.png" id="2_s5tiy"]
[ext_resource type="Shader" uid="uid://dngotvsdxaptf" path="res://Characters/shaders/Shader_Commom.gdshader" id="3_xp5sn"]
[ext_resource type="Texture2D" uid="uid://41dg8hgeu64d" path="res://Characters/Sprites/enemies/Sprite-maça.png" id="4_i72w6"]
[ext_resource type="Script" uid="uid://dj6mgqkl4bbi" path="res://Characters/Scripts/State_machine/Maquina_de_estados.gd" id="5_xp5sn"]
[ext_resource type="Script" uid="uid://b1lqjjb2d07so" path="res://Characters/Scripts/State_machine/States/Estado_persegue.gd" id="6_ye8bb"]
[ext_resource type="Script" uid="uid://dg37p8ikikv8m" path="res://Characters/Scripts/State_machine/States/Estado_de_guarda.gd" id="7_non2o"]
[ext_resource type="Script" uid="uid://322pa2ii1tkl" path="res://Characters/Scripts/State_machine/States/Estado_de_splash.gd" id="8_oxvvp"]
[ext_resource type="Script" uid="uid://d18owprjycfu4" path="res://Characters/Scripts/State_machine/States/Estado_de_hit.gd" id="9_mv1e0"]
[ext_resource type="Script" uid="uid://2e8xh4ynug5v" path="res://Characters/Scripts/State_machine/States/Estado_dash.gd" id="10_lnisl"]
[ext_resource type="Script" uid="uid://tna8xf4xv5kl" path="res://Characters/Scripts/State_machine/States/estado_morto.gd" id="11_v45py"]
[ext_resource type="PackedScene" uid="uid://c6wxcrfi7oiuo" path="res://Characters/cines/dead_particles.tscn" id="12_6umby"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro6mq"]
size = Vector2(18.260872, 15.652174)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_liydr"]
resource_local_to_scene = true
shader = ExtResource("3_xp5sn")
shader_parameter/flash_cor = Color(1, 0, 0, 1)
shader_parameter/float_flash = 0.0

[sub_resource type="Animation" id="Animation_liydr"]
resource_name = "Dash"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/float_flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_wvwbr"]
resource_name = "Dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/float_flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_g7j8p"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_cor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/float_flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ro6mq"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/float_flash")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lw6yg"]
resource_name = "Preatk"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_cor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/float_flash")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.36666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_vcb01"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_cor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/float_flash")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gb2bb"]
resource_name = "Splash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/float_flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kvp6a"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/float_flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gb2bb"]
_data = {
&"Dash": SubResource("Animation_liydr"),
&"Dead": SubResource("Animation_wvwbr"),
&"Hit": SubResource("Animation_g7j8p"),
&"Idle": SubResource("Animation_ro6mq"),
&"Preatk": SubResource("Animation_lw6yg"),
&"RESET": SubResource("Animation_vcb01"),
&"Splash": SubResource("Animation_gb2bb"),
&"Walk": SubResource("Animation_kvp6a")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xp5sn"]
polygon = PackedVector2Array(-13.996218, 16.000216, 13.829868, 16.000216, 15.578039, 14.261062, 15.605162, 9.0436, 13.010027, 6.434869, 15.632283, 3.8261375, 15.663926, -2.2609005, 13.073313, -5.73921, 9.608613, -8.34794, 5.265307, -9.217518, 4.4138236, -12.695826, 1.8186889, -15.304556, -2.5291371, -15.304556, -6.0254793, -11.826248, -6.043561, -8.34794, -9.521821, -8.34794, -15.64494, -1.391325, -15.672063, 3.8261375, -13.076929, 6.434869, -15.699184, 9.0436, -15.7217865, 13.391484)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7j8p"]
size = Vector2(26.956524, 19.130436)

[node name="Maça" type="CharacterBody2D" node_paths=PackedStringArray("Anim", "Image_texture", "Maquina_estados", "Area")]
y_sort_enabled = true
scale = Vector2(1.15, 1.15)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_xp5sn")
Anim = NodePath("Texture/AnimationPlayer")
Image_texture = NodePath("Texture")
Maquina_estados = NodePath("MaçaEstados")
Area = NodePath("Hit")
FOLLOW_DISTANCE = 250.0
Enemie_life = 60
Enemie_vel = 20.0
metadata/_custom_type_script = "uid://0yc5gc8nbm7k"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 4
path_postprocessing = 1

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
hit_from_inside = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.3043481, -11.304349)
shape = SubResource("RectangleShape2D_ro6mq")

[node name="Sombra" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
texture = ExtResource("2_s5tiy")

[node name="Texture" type="Sprite2D" parent="."]
z_index = 2
y_sort_enabled = true
material = SubResource("ShaderMaterial_liydr")
position = Vector2(0, -16)
skew = -0.0051983735
texture = ExtResource("4_i72w6")
hframes = 8
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Texture"]
libraries = {
&"": SubResource("AnimationLibrary_gb2bb")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Texture"]
occluder = SubResource("OccluderPolygon2D_xp5sn")

[node name="Hit" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2(0.43478206, -10.434784)
shape = SubResource("RectangleShape2D_g7j8p")

[node name="MaçaEstados" type="Node" parent="." node_paths=PackedStringArray("Estado_Incial")]
script = ExtResource("5_xp5sn")
Estado_Incial = NodePath("EstadoGuarda")
metadata/_custom_type_script = "uid://dj6mgqkl4bbi"

[node name="EstadoPersegue" type="Node" parent="MaçaEstados" node_paths=PackedStringArray("Agent", "Ray", "Character")]
script = ExtResource("6_ye8bb")
Agent = NodePath("../../NavigationAgent2D")
Ray = NodePath("../../RayCast2D")
Character = NodePath("../..")
State = Array[String](["EstadoDash", "EstadoGuarda"])
metadata/_custom_type_script = "uid://b1lqjjb2d07so"

[node name="EstadoGuarda" type="Node" parent="MaçaEstados" node_paths=PackedStringArray("Character")]
script = ExtResource("7_non2o")
Character = NodePath("../..")
State = Array[String](["EstadoPersegue"])
metadata/_custom_type_script = "uid://dg37p8ikikv8m"

[node name="EstadoSplash" type="Node" parent="MaçaEstados" node_paths=PackedStringArray("Anim", "Character")]
script = ExtResource("8_oxvvp")
Anim = NodePath("../../Texture/AnimationPlayer")
Character = NodePath("../..")
State = Array[String](["EstadoGuarda"])
metadata/_custom_type_script = "uid://322pa2ii1tkl"

[node name="EstadoHit" type="Node" parent="MaçaEstados" node_paths=PackedStringArray("Anim", "Character")]
script = ExtResource("9_mv1e0")
Anim = NodePath("../../Texture/AnimationPlayer")
Character = NodePath("../..")
State = Array[String](["EstadoGuarda"])
metadata/_custom_type_script = "uid://d18owprjycfu4"

[node name="EstadoDash" type="Node" parent="MaçaEstados" node_paths=PackedStringArray("Anim", "Area2d", "Sprite2d", "Character")]
script = ExtResource("10_lnisl")
Anim = NodePath("../../Texture/AnimationPlayer")
Area2d = NodePath("../../Hit")
Sprite2d = NodePath("../../Texture")
Frame_Ghost = 20
Character = NodePath("../..")
State = Array[String](["EstadoSplash"])
metadata/_custom_type_script = "uid://2e8xh4ynug5v"

[node name="EstadoMorto" type="Node" parent="MaçaEstados" node_paths=PackedStringArray("Anim", "Collision", "Area2d", "Character")]
script = ExtResource("11_v45py")
Anim = NodePath("../../Texture/AnimationPlayer")
Collision = NodePath("../../CollisionShape2D")
Area2d = NodePath("../../Hit")
Dead_particles = ExtResource("12_6umby")
Character = NodePath("../..")
metadata/_custom_type_script = "uid://tna8xf4xv5kl"
